Fix double scroll bars in IE

--- a/public/sass/_elements.global.scss
+++ b/public/sass/_elements.global.scss
@@ -2,8 +2,14 @@
     #ELEMENTS.GLOBAL
 \*------------------------------------*/
 
-html, body {
+html {
   height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+body {
+  height: 100%; // without this it won't scroll at all
   width: 100%;
   min-height: 100%;
   overflow: hidden;
